--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.11.1",
-    "graphql": "^16.6.0"
+    "graphql": "^16.6.0",
+    "node-fetch": "^3.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
   },
-  "type":  "module"
+  "type": "module"
 }
